code25_all/scala/7968912.txt
length
Length
scala> def length[A, F[_] : Length]: F[A] => Int = _.len
length: [A, F[_]](implicit evidence$1: scalaz.Length[F])F[A] => Int

length(List(2, 3))
scala> length(List(2, 3))
<console>:15: error: type mismatch;
 found   : List[Int]
 required: scalaz.Length[?]
              length(List(2, 3))
                         ^

length(implicitly)(List(2, 3))
scala> length(implicitly[Length[List]])(List(2, 3))
res16: Int = 2

length
length(List(2, 3))
